--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,14 @@ select {
 .all__code {
     display: flex;
     justify-content: center;
+    height: 100vh;
+    width: 100%;
 }
 
 
 .background {
-    background-image: url(../IMG/fon.jpeg);
+    /* background-image: url(../IMG/fon.jpeg); */
+    background-color: darkblue;
     width: 100%;
     height: 100vh;
 }
@@ -162,4 +165,21 @@ select {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: 1px solid black;
+}
+
+.pravila{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textPrav{
+    width: 50%;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 100px;
+    padding: 13px;
+    background-color:goldenrod;
+    border: 1px solid black;
+    border-radius: 50px;
 }
