--- a/css/style.css
+++ b/css/style.css
@@ -127,59 +127,170 @@ select {
     flex-direction: row;
 }
 
+
+/* Игра */
+
 .gameScreen {
     display: grid;
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
     height: 400px;
     width: 600px;
     justify-content: center;
+    grid-row-gap: 20px;
 }
-
-.gameScreen div {
-    display: grid;
-    background-color: goldenrod;
-}
-
 
 .gameTop {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    border: 1px solid black;
+    gap: 15px;
 }
+
+.gameTopOne {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: rgb(93, 209, 122);
+    border: 1px solid black;
+    border-radius: 50px;
+    align-items: center;
+    justify-items: center;
+    font-size: 25px;
+    font-weight: bold;
+    height: 45px;
+}
+
+.gameTopTwo {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 15px;
+}
+
+.gameTopTwo div {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    background-color: rgb(39, 238, 211);
+    border: 1px solid black;
+    border-radius: 50px;
+    align-items: center;
+    justify-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    height: 35px;
+}
+
 
 .gameBoard {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: 1px solid black;
+    background-color: rgb(93, 209, 122);
+    gap: 3px;
+    padding: 3px;
 }
 
 .gameBoard div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: 1px solid black;
-    height: 100px;
+    background-color: goldenrod;
+    height: 80px;
+    width: 80px;
+    align-items: center;
+    font-size: 50px;
+    font-weight: bold;
+    padding-left: 13px;
+    border-radius: 5px;
 }
 
 .gameFoot {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    color: rgb(255, 255, 255);
+    background-color: rgb(207, 29, 16);
     border: 1px solid black;
+    border-radius: 50%;
+    align-items: center;
+    justify-items: center;
+    font-size: 25px;
+    font-weight: bold;
+    height: 100px;
+    width: 100px;
+    justify-self: center;
 }
 
-.pravila{
+
+/* Правила */
+
+.pravila {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.textPrav{
+.textPrav {
     width: 50%;
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 100px;
     padding: 13px;
-    background-color:goldenrod;
+    background-color: goldenrod;
     border: 1px solid black;
     border-radius: 50px;
+}
+
+
+/* Статистика */
+.statScr {
+    display: grid;
+    grid-row-gap: 20px;
+    width: 400px;
+    height: 250px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 100px;
+    font-size: 20px;
+}
+
+.statTop {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: rgb(93, 209, 122);
+    border: 1px solid black;
+    border-radius: 50px;
+    align-items: center;
+    justify-items: center;
+    font-size: 25px;
+    font-weight: bold;
+    height: 60px;
+}
+
+.statBoard {
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: 3fr 1fr;
+
+}
+
+.statBoard div {
+    background-color: goldenrod;
+    border: 1px solid black;
+    border-radius: 50px;
+    text-align: center;
+}
+
+.statFoot {
+    display: grid;
+    grid-template-columns: 1fr;
+    color: rgb(255, 255, 255);
+    background-color: rgb(207, 29, 16);
+    border: 1px solid black;
+    border-radius: 50%;
+    align-items: center;
+    justify-items: center;
+    font-size: 25px;
+    font-weight: bold;
+    height: 100px;
+    width: 100px;
+    justify-self: center;
 }
