--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,14 @@ select {
     width: 100%;
 }
 
+.mainScreen{
+margin-top: 300px;
+font-size: 30px;
+}
 
 .background {
-    /* background-image: url(../IMG/fon.jpeg); */
-    background-color: darkblue;
+    background-image: url(../IMG/bgimg.jpg);
+    /* background-color: darkblue; */
     width: 100%;
     height: 100vh;
 }
@@ -101,22 +105,80 @@ select {
 .patnashki {
     display: flex;
     justify-content: center;
-    width: 100%;
+    /* width: 100%;
     height: 50px;
     background-color: goldenrod;
     border-radius: 50px;
     border: 1px black;
-    margin: 10px;
+    margin: 10px; */
 }
 
-.btn {
+.btn1 {
     display: flex;
-    background-color: goldenrod;
-    border-radius: 50px;
-    border: 1px black;
-    width: 150px;
+    border-radius: 100px 100px 5px 5px;
+    border: 2px solid black;
+    height: 75px;
+    width: 300px;
     justify-content: center;
-    margin: 10px;
+    background-color: rgb(93, 209, 122);
+    width: 100%;
+    height: 50px;    
+}
+
+.bigBtn{
+    font-size: 45px;
+}
+
+.urlAutors{
+background-color: red;
+border-radius: 50px;
+border: 3px black solid;
+
+}
+
+.autors{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
+.btn2 {
+    display: flex;
+    background-color: rgb(93, 209, 122);
+    border-radius: 100px 0px 0px 5px;
+    border: 2px solid black;
+    height: 75px;
+    width: 300px;
+    justify-content: center;
+
+}
+.btn3 {
+    display: flex;
+    background-color: red;
+    border-radius: 0px 0px 0px 0px;
+    border: 2px solid black;
+    height: 75px;
+    width: 300px;
+    justify-content: center;
+    
+}
+.btn4 {
+    display: flex;
+    background-color: rgb(93, 209, 122);
+    border-radius: 0px 100px 5px 0px;
+    border: 2px solid black;
+    height: 75px;
+    width: 300px;
+    justify-content: center;
+}
+.btn5 {
+    display: flex;
+    background-color: rgb(93, 209, 122);
+    border-radius: 100px 100px 5px 5px;
+    border: 2px solid black;
+    height: 75px;
+    width: 300px;
+    justify-content: center;
 }
 
 .top {
@@ -127,6 +189,12 @@ select {
     flex-direction: row;
 }
 
+.back{
+    background-color: red;
+    border: 3px solid black;
+    border-radius: 50px;
+    margin: 20px;
+}
 
 /* Игра */
 
