--- a/css/style.css
+++ b/css/style.css
@@ -266,21 +266,20 @@ select {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: 1px solid black;
     background-color: rgb(93, 209, 122);
+    align-self: center;
     gap: 3px;
     padding: 3px;
 }
 
 .gameBoard div {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
     border: 1px solid black;
     background-color: goldenrod;
     height: 80px;
     width: 80px;
-    align-items: center;
+    text-align: center;
     font-size: 50px;
     font-weight: bold;
-    padding-left: 13px;
     border-radius: 5px;
 }
 
