--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,10 @@ a:not([class]) {
 }
 
 /* Упрощаем работу с изображениями */
-/* img {
+img {
     max-width: 100%;
     display: block;
-} */
+}
 
 /* Указываем понятную периодичность в потоке данных у article*/
 article>*+* {
@@ -85,8 +85,8 @@ select {
 }
 
 .mainScreen {
-    margin-top: 300px;
-    font-size: 30px;
+    margin-top: 200px;
+    width: 400px;
 }
 
 .background {
@@ -94,99 +94,99 @@ select {
     /* background-color: darkblue; */
     width: 100%;
     height: 100vh;
+    background-position-x: center;
+    align-items: center;
 }
-
 
 .h {
     display: flex;
-    height: 100px;
-}
-
-.patnashki {
-    display: flex;
     justify-content: center;
-    /* width: 100%;
-    height: 50px;
-    background-color: goldenrod;
-    border-radius: 50px;
-    border: 1px black;
-    margin: 10px; */
+    align-items: center;
 }
 
 .btn1 {
     display: flex;
     border-radius: 100px 100px 5px 5px;
     border: 2px solid black;
-    height: 85px;
+    height: 75px;
     width: 300px;
     justify-content: center;
-    background-color: rgb(93, 209, 122);
-    width: 100%;
-    height: 50px;
+    align-items: center;
+    background-color: rgba(93, 209, 122, 0.74);
+    margin-bottom: 20px;
 }
 
-.patnashki{
-    height: 70px;
-}
 .bigBtn {
-    font-size: 45px;
-   
-}
-
-.urlAutors {
-    background-color: red;
-    border-radius: 50px;
-    border: 3px black solid;
-
-}
-
-.autors {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
+    font-size: 25px;
 }
 
 .btn2 {
     display: flex;
-    background-color: rgb(93, 209, 122);
-    border-radius: 100px 0px 0px 5px;
+    background-color: rgba(93, 209, 122, 0.74);
+    border-radius: 100px 0px 0px 30px;
     border: 2px solid black;
     height: 75px;
     width: 300px;
     justify-content: center;
+    align-items: center;
+}
 
+.btn2:hover {
+    background-color: rgb(37, 218, 82);
+    font-weight: bold;
 }
 
 .btn3 {
     display: flex;
-    background-color: red;
+    background-color: rgba(253, 30, 30, 0.856);
     border-radius: 0px 0px 0px 0px;
     border: 2px solid black;
     height: 75px;
     width: 300px;
     justify-content: center;
+    align-items: center;
+}
 
+.btn3:hover {
+    display: flex;
+    background-color: rgb(207, 29, 16);
+    font-weight: bold;
 }
 
 .btn4 {
     display: flex;
-    background-color: rgb(93, 209, 122);
-    border-radius: 0px 100px 5px 0px;
+    background-color: rgba(93, 209, 122, 0.74);
+    border-radius: 0px 100px 30px 0px;
     border: 2px solid black;
     height: 75px;
     width: 300px;
     justify-content: center;
+    align-items: center;
 }
+
+.btn4:hover {
+    background-color: rgb(37, 218, 82);
+    font-weight: bold;
+}
+
 
 .btn5 {
     display: flex;
-    background-color: rgb(93, 209, 122);
-    border-radius: 100px 100px 5px 5px;
+    background-color: rgba(93, 209, 122, 0.74);
+    border-radius: 5px 5px 100px 100px;
     border: 2px solid black;
     height: 75px;
     width: 300px;
     justify-content: center;
+    align-items: center;
+    margin: 20px;
 }
+
+.btn5:hover {
+    background-color: rgb(37, 218, 82);
+    font-weight: bold;
+}
+
 
 .top {
     width: 100%;
@@ -196,19 +196,6 @@ select {
     flex-direction: row;
 }
 
-.back {
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    background-color: rgb(207, 29, 16);
-    border: 1px solid black;
-    color: rgb(255, 255, 255);
-    font-size: 25px;
-    border-radius: 50%;
-    width: 98px;
-    height: 98px;
-    margin: 20px;
-}
 
 /* Игра */
 
@@ -216,16 +203,16 @@ select {
     display: grid;
     margin-left: 50px;
     margin-right: 50px;
-    margin-top: 50px;
+    margin-top: 20px;
     height: 400px;
     width: 600px;
     justify-content: center;
-    grid-row-gap: 20px;
+    grid-row-gap: 10px;
 }
 
 .gameTop {
     display: grid;
-    gap: 15px;
+    gap: 10px;
 }
 
 .gameTopOne {
@@ -244,7 +231,7 @@ select {
 .gameTopTwo {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    gap: 15px;
+    gap: 10px;
 }
 
 .gameTopTwo div {
@@ -283,11 +270,15 @@ select {
     border-radius: 5px;
 }
 
+.gameBoard div:hover {
+    background-color: rgb(148, 106, 0);
+}
+
 .gameFoot {
     display: grid;
     grid-template-columns: 1fr;
     color: rgb(255, 255, 255);
-    background-color: rgb(207, 29, 16);
+    background-color: rgba(253, 30, 30, 0.856);
     border: 1px solid black;
     border-radius: 50%;
     align-items: center;
@@ -299,6 +290,12 @@ select {
     justify-self: center;
 }
 
+.gameFoot:hover {
+    background-color: rgb(207, 29, 16);
+    font-weight: bold;
+}
+
+
 
 /* Правила */
 
@@ -306,6 +303,7 @@ select {
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-row-gap: 20px;
 }
 
 .textPrav {
@@ -360,18 +358,43 @@ select {
     text-align: center;
 }
 
-.statFoot {
+/* Авторы */
+
+.autors {
     display: grid;
-    grid-template-columns: 1fr;
-    color: rgb(255, 255, 255);
-    background-color: rgb(207, 29, 16);
-    border: 1px solid black;
-    border-radius: 50%;
+    grid-row-gap: 20px;
     align-items: center;
-    justify-items: center;
-    font-size: 25px;
+}
+
+.urlAutors {
+    background-color: goldenrod;
+    width: 200px;
+    height: 75px;
+    border: 1px solid black;
+    border-radius: 50px;
+    text-align: center;
+}
+
+.urlAutors a {
+    outline: none;
+    text-decoration: none;
+    display: inline-block;
+    color: black;
     font-weight: bold;
-    height: 100px;
-    width: 100px;
-    justify-self: center;
+    font-size: 22px;
+}
+
+.urlAutors a:hover {
+    outline: none;
+    text-decoration: none;
+    display: inline-block;
+    color: rgb(4, 31, 61);
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.autors {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
 }
