--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ select {
         font-family: Cristmas;
     }
 
-    .gameTopTwo div {
+    .gameTopTwo{
         display: grid;
         grid-template-columns: 3fr 1fr;
         /* background-color: rgb(39, 238, 211); */
@@ -572,8 +572,8 @@ select {
         justify-items: center;
         font-size: small;
         font-weight: bold;
-        height: 20px;
-        width: 100px;
-        font-size: 10px;
+        height: 40px;
+        width: 100%;
+        font-size: 40px;
     }
 }
