--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,8 @@ select {
 @media only screen and (max-width:3000px) {
     .number {
         display: grid;
-        width: 70px;
-        height: 70px;
+        width: 35px;
+        height: 35px;
         font-size: small;
         align-items: center;
         font-size: 10px;
@@ -453,7 +453,7 @@ select {
         border-radius: 100px 100px 5px 5px;
         border: 2px solid black;
         height: 50px;
-        width: 300px;
+        width: 200px;
         justify-content: center;
         align-items: center;
         background-color: rgba(93, 209, 122, 0.74);
@@ -468,7 +468,7 @@ select {
         /* border-radius: 100px 0px 0px 30px; */
         border: 2px solid black;
         height: 50px;
-        width: 100px;
+        width: 67px;
         justify-content: center;
         align-items: center;
         font-family: Cristmas;
@@ -481,7 +481,7 @@ select {
         /* border-radius: 0px 0px 0px 0px; */
         border: 2px solid black;
         height: 50px;
-        width: 100px;
+        width: 67px;
         justify-content: center;
         align-items: center;
         font-family: Cristmas;
@@ -494,7 +494,7 @@ select {
         /* border-radius: 0px 100px 30px 0px; */
         border: 2px solid black;
         height: 50px;
-        width: 100px;
+        width: 67px;
         justify-content: center;
         align-items: center;
         font-family: Cristmas;
@@ -507,7 +507,7 @@ select {
         border-radius: 5px 5px 100px 100px;
         border: 2px solid black;
         height: 50px;
-        width: 300px;
+        width: 200px;
         justify-content: center;
         align-items: center;
         margin: 10px;
@@ -532,8 +532,9 @@ select {
         grid-column-gap: 10px;
         grid-row-gap: 10px;
         grid-template-columns: 3fr 1fr;
-
-
+    }
+    .fontsize{
+        font-size: 10px;
     }
 
     .statScr {
@@ -547,7 +548,7 @@ select {
         font-size: small;
         font-family: Cristmas;
     }
-    
+
     .gameTopOne {
         display: grid;
         grid-template-columns: 1fr;
@@ -562,7 +563,7 @@ select {
         font-family: Cristmas;
     }
 
-    .gameTopTwo{
+    .gameTopTwo {
         display: grid;
         grid-template-columns: 3fr 1fr;
         /* background-color: rgb(39, 238, 211); */
@@ -575,5 +576,22 @@ select {
         height: 40px;
         width: 100%;
         font-size: 40px;
+    }
+
+    .gameBoard {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        border: 1px solid black;
+        background-color: rgb(93, 209, 122);
+        align-self: center;
+        gap: 3px;
+        padding: 3px;
+        width: 159px;
+        font-family: Cristmas;
+    }
+
+    .gcentr {
+        display: flex;
+        flex-direction: column;
     }
 }
